--- a/Smart/Views/Shared/_Scripts.cshtml
+++ b/Smart/Views/Shared/_Scripts.cshtml
@@ -32,8 +32,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
 
-    
-    
+
+
 
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     <!-- IMPORTANT: Smart Core -->
@@ -54,6 +54,7 @@
     <script src="~/js/plugin/flot/jquery.flot.pie.js"></script>
     <script src="~/js/plugin/flot/jquery.flot.time.js"></script>
     <script src="~/js/plugin/flot/jquery.flot.tooltip.js"></script>
+    <script src="~/js/plugin/smartwidgets/JarvisWidget.js"></script>
     <!-- Vector Maps Plugin: Vectormap engine, Vectormap language -->
     <script src="~/js/plugin/vectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="~/js/plugin/vectormap/jquery-jvectormap-world-mill-en.js"></script>
@@ -116,6 +117,8 @@
     <!-- Vector Maps Plugin: Vectormap engine, Vectormap language -->
     <script src="~/js/plugin/vectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="~/js/plugin/vectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="~/js/plugin/smartwidgets/JarvisWidget.min.js"></script>
+
 </environment>
 <!-- JQUERY VALIDATE -->
 @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
