--- a/Smart/Views/Shared/_StylesheetsPartial.cshtml
+++ b/Smart/Views/Shared/_StylesheetsPartial.cshtml
@@ -4,13 +4,14 @@
     <!-- For use databels in b4 -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.1/css/buttons.dataTables.min.css" />
-    
+
     <!-- Jquery UI -->
     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.12.1/themes/ui-lightness/jquery-ui.css" />
     <link href="~/css/bootstrap-4-navbar.css" rel="stylesheet" />
 
     <!-- Font Awesome is CDN now, and use last version -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <!-- SmartAdmin Styles : Caution! DO NOT change the order -->
     <link rel="stylesheet" href="~/css/smart.css" />
     <!-- We recommend you use "site.css" to override. -->
@@ -24,8 +25,7 @@
     <!-- Jquery UI -->
     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.12.1/themes/ui-lightness/jquery-ui.css" />
     <!-- Font Awesome is CDN now, and use last version -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-    <!-- SmartAdmin Styles : Caution! DO NOT change the order -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">    <!-- SmartAdmin Styles : Caution! DO NOT change the order -->
     <link rel="stylesheet" href="~/css/smart.min.css" asp-append-version="true" />
     <!-- We recommend you use "site.css" to override. -->
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
