--- a/Smart/Views/_ViewImports.cshtml
+++ b/Smart/Views/_ViewImports.cshtml
@@ -24,4 +24,5 @@
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject IHtmlLocalizer<ViewsResource>  ViewsLocalizer
 @inject IHtmlLocalizer<LoginResource>  LoginLocalizer
+@inject IHtmlLocalizer<HomeResource>  HomeLocalizer
 @*@inject IStringLocalizer<SharedResource> StringLocalizer*@
