--- a/Smart/Views/Shared/_HeaderUser.cshtml
+++ b/Smart/Views/Shared/_HeaderUser.cshtml
@@ -1,11 +1,11 @@
 ﻿<header style="background-color: #005a86">
-    <div class="container">
+    <div class="container font-weight-light">
         <nav class="navbar navbar-expand-lg navbar-dark" style=" background-color: #005a86;">
             <a class="navbar-brand" href="/">
                 <img src="~/images/logo-white.png" width="118" alt="">
             </a>
             <span class="navbar-text mr-auto mt-2 mt-lg-0">
-                Ambiente seguro, seus dados estão protegidos
+                @SharedLocalizer["Ambiente seguro, seus dados estão protegidos"]
             </span>
             @await Html.PartialAsync("_LoginPartial")
         </nav>
